--- a/sections/article-back-to-blog.liquid
+++ b/sections/article-back-to-blog.liquid
@@ -1,4 +1,4 @@
-<div class="text-center return-link-wrapper page-width">
+<div class="text-center return-link-wrapper page-width singelblogbackbutton">
   <a href="{{ blog.url }}" class="btn btn--secondary btn--has-icon-before">
     {% render 'icon-arrow-left' %}
     {{ 'blogs.article.back_to_blog' | t: title: blog.title }}
@@ -12,3 +12,13 @@
   "name": "t:sections.article-back-to-blog.name"
 }
 {% endschema %}
+
+<style>
+.singelblogbackbutton{
+  margin:0;
+  padding:100px 0 200px 0;
+  background: #F8F8F8;
+}
+
+
+</style>
