--- a/sections/article-comments.liquid
+++ b/sections/article-comments.liquid
@@ -55,78 +55,99 @@
     </div>
   {% endif %}
 
-  <hr aria-hidden="true">
-  <div class="page-width">
-    <div class="grid">
-      <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-        <div class="comment-form form-vertical">
-          {% form 'new_comment', article %}
-
-            {%- assign formId = 'CommentForm' -%}
-
-            <h2 class="h3">{{ 'blogs.comments.title' | t }}</h2>
-
-            {%- liquid
-              assign post_message = 'blogs.comments.success'
-              if blog.moderated? and comment.status == 'pending'
-                assign post_message = 'blogs.comments.success_moderated'
-              elsif comment.status == 'unapproved' or comment.status == 'spam'
-                assign post_message = 'blogs.comments.unapproved'
-              endif
-            -%}
-
-            {% render 'form-status', form: form, form_id: formId, success_message: post_message %}
-
-            <div class="grid">
-
-              <div class="grid__item medium-up--one-half">
-                <label for="{{ formId }}-author">{{ 'blogs.comments.name' | t }}</label>
-                <input type="text" name="comment[author]" id="{{ formId }}-author" class="input-full{% if form.errors contains 'author' %} input--error{% endif %}" value="{{ form.author }}"{% if form.errors contains 'author' %} aria-invalid="true" aria-describedby="{{ formId}}-author-error"{% endif %}>
-                {% if form.errors contains 'author' %}
-                  <span id="{{ formId}}-author-error" class="input-error-message">
-                    <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
-                    {% render 'icon-error' %}
-                    <span>{{ 'blogs.comments.name' | t }} {{ form.errors.messages['author'] }}.</span>
-                  </span>
-                {% endif %}
+<div class="commnet-wrappper-form">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 offset-md-1">
+        <div class="page-wrapper-from">
+  
+         
+           
+              <div class="comment-form form-vertical">
+                {% form 'new_comment', article %}
+      
+                  {%- assign formId = 'CommentForm' -%}
+      
+                  
+      
+                  {%- liquid
+                    assign post_message = 'blogs.comments.success'
+                    if blog.moderated? and comment.status == 'pending'
+                      assign post_message = 'blogs.comments.success_moderated'
+                    elsif comment.status == 'unapproved' or comment.status == 'spam'
+                      assign post_message = 'blogs.comments.unapproved'
+                    endif
+                  -%}
+      
+                  {% render 'form-status', form: form, form_id: formId, success_message: post_message %}
+      
+                 
+      
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="singel-input-wrapper">
+                        <label for="{{ formId }}-author">{{ 'blogs.comments.name' | t }}</label>
+                        <input type="text" name="comment[author]" id="{{ formId }}-author" class="input-full{% if form.errors contains 'author' %} input--error{% endif %}" value="{{ form.author }}"{% if form.errors contains 'author' %} aria-invalid="true" aria-describedby="{{ formId}}-author-error"{% endif %} placeholder="Your name">
+                        {% if form.errors contains 'author' %}
+                          <span id="{{ formId}}-author-error" class="input-error-message">
+                            <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
+                            {% render 'icon-error' %}
+                            <span>{{ 'blogs.comments.name' | t }} {{ form.errors.messages['author'] }}.</span>
+                          </span>
+                        {% endif %}
+                      </div>
+                    </div>
+      
+                    <div class="col-md-6">
+                      <div class="singel-input-wrapper">
+                      <label for="{{ formId }}-email">{{ 'blogs.comments.email' | t }}</label>
+                      <input type="email" name="comment[email]" id="{{ formId }}-email" class="input-full{% if form.errors contains 'email' %} input--error{% endif %}" value="{{ form.email }}" autocorrect="off" autocapitalize="off" {% if form.errors contains 'email' %} aria-invalid="true" aria-describedby="{{ formId}}-email-error"{% endif %} placeholder="Your email address">
+                      {% if form.errors contains 'email' %}
+                        <span id="{{ formId}}-email-error" class="input-error-message">
+                          <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
+                          {% render 'icon-error' %}
+                          <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
+                        </span>
+                      {% endif %}
+                    </div>
+                    </div>
+      
+                    <div class="col-md-12">
+                      <div class="singel-input-wrapper">
+                      <label for="{{ formId }}-body">{{ 'blogs.comments.message' | t }}</label>
+                      <textarea placeholder="Join the conversation" name="comment[body]" id="{{ formId }}-body" class="input-full{% if form.errors contains 'body' %} input--error{% endif %}"{% if form.errors contains 'body' %} aria-invalid="true" aria-describedby="{{ formId}}-body-error"{% endif %}>{{ form.body }}</textarea>
+                      {% if form.errors contains 'body' %}
+                        <span id="{{ formId}}-body-error" class="input-error-message">
+                          <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
+                          {% render 'icon-error' %}
+                          <span>{{ 'blogs.comments.message' | t }} {{ form.errors.messages['body'] }}.</span>
+                        </span>
+                      {% endif %}
+                      </div>
+                    </div>
+                  </div>
+      
+           
+      
+                  {% if blog.moderated? %}
+                    <p class="fine-print">{{ 'blogs.comments.moderated' | t }}</p>
+                  {% endif %}
+      
+                  <input type="submit" class="btn" value="Post">
+                {% endform %}
               </div>
-
-              <div class="grid__item medium-up--one-half">
-                <label for="{{ formId }}-email">{{ 'blogs.comments.email' | t }}</label>
-                <input type="email" name="comment[email]" id="{{ formId }}-email" class="input-full{% if form.errors contains 'email' %} input--error{% endif %}" value="{{ form.email }}" autocorrect="off" autocapitalize="off" {% if form.errors contains 'email' %} aria-invalid="true" aria-describedby="{{ formId}}-email-error"{% endif %}>
-                {% if form.errors contains 'email' %}
-                  <span id="{{ formId}}-email-error" class="input-error-message">
-                    <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
-                    {% render 'icon-error' %}
-                    <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
-                  </span>
-                {% endif %}
-              </div>
-
-              <div class="grid__item">
-                <label for="{{ formId }}-body">{{ 'blogs.comments.message' | t }}</label>
-                <textarea name="comment[body]" id="{{ formId }}-body" class="input-full{% if form.errors contains 'body' %} input--error{% endif %}"{% if form.errors contains 'body' %} aria-invalid="true" aria-describedby="{{ formId}}-body-error"{% endif %}>{{ form.body }}</textarea>
-                {% if form.errors contains 'body' %}
-                  <span id="{{ formId}}-body-error" class="input-error-message">
-                    <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
-                    {% render 'icon-error' %}
-                    <span>{{ 'blogs.comments.message' | t }} {{ form.errors.messages['body'] }}.</span>
-                  </span>
-                {% endif %}
-              </div>
-
-            </div>
-
-            {% if blog.moderated? %}
-              <p class="fine-print">{{ 'blogs.comments.moderated' | t }}</p>
-            {% endif %}
-
-            <input type="submit" class="btn" value="{{ 'blogs.comments.post' | t }}">
-          {% endform %}
-        </div>
+          
+          </div>
+          
+  
+  
+  
+  
+  
       </div>
     </div>
   </div>
+</div>
 {% endif %}
 
 
