--- a/sections/article-template.liquid
+++ b/sections/article-template.liquid
@@ -1,29 +1,41 @@
-<article class="page-width" aria-labelledby="title-0">
-  <div class="grid">
-    <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-      <div class="section-header text-center">
-        <h1 class="article__title" id="title-0">{{ article.title }}</h1>
-        {% if section.settings.blog_show_author %}
-          <span class="article__author">{{ 'blogs.article.by_author' | t: author: article.author }}</span>
-        {% endif %}
-      
-        {% if section.settings.blog_show_date %}
-          <span class="article__date">
-            {{ article.published_at | time_tag: format: 'date' }}
-          </span>
-        {% endif %}
-      </div>
-      
-      <div class="rte">
-        {{ article.content }}
-      </div>
-      
-      {% if section.settings.show_share_buttons %}
-        {% render 'social-sharing', share_title: article.title, share_permalink: article.url, share_image: article.image %}
-      {% endif %}
-    </div>
+<section class="overflow-hidden" >
+  <div class="sigle-blog-hero">
+      <img src="{{ article.image | img_url: ''  }}g" alt="">
   </div>
-</article>
+</section>
+<!-- --------sigle-content-section----- -->
+<section class="sigle-content-area">
+  <div class="single-content-container">
+      <div class="single-content">
+          <h6>{{ article.published_at | time_tag: format: 'date' }}</h6>
+          <h1>{{ article.title }}</h1>
+          <div class="border-div"></div>
+          {{ article.content }}
+          <div class="border-div"></div>
+          <!-- ------========------------- -->
+          <div class="d-flex justify-content-between flex-md-row flex-column">
+              <div>
+                {% for tag in article.tags %}
+
+                  <a href="{{ blog.url }}/tagged/{{ tag | handle }}"><button class="single-content-btn ">{{ tag }}</button></a>
+                  
+
+                {% endfor %}
+              </div>
+              <div class="mt-4 mt-md-0">
+                {% if section.settings.show_share_buttons %}
+                  {% render 'social-sharing', share_title: article.title, share_permalink: article.url, share_image: article.image %}
+                {% endif %}
+              </div>
+          </div>
+       
+          <!-- -------========------------- -->
+          
+      </div>
+  </div>
+</section>
+
+
 
 <script type="application/ld+json">
   {
