--- a/sections/blog-template.liquid
+++ b/sections/blog-template.liquid
@@ -1,64 +1,50 @@
-{% paginate blog.articles by 12 %}
 
-<div class="page-width">
-  <header class="section-header text-center">
-    <h1>{{ page_title }}</h1>
-    {% if blog.tags.size > 0 %}
-      <div class="blog-filter">
-        <label class="blog-filter__label select-label" for="BlogTagFilter">{{ 'collections.filters.title_tags' | t }}</label>
-        <div class="select-group">
-          <select id="BlogTagFilter" aria-describedby="a11y-refresh-page-message a11y-selection-message" data-blog-tag-filter>
-            <option value="{{ blog.url }}">{{ 'blogs.article.all_topics' | t }}</option>
-            {% for tag in blog.all_tags %}
-              <option value="{{ blog.url }}/tagged/{{ tag | handleize }}" {% if current_tags contains tag %}selected{% endif %}>{{ tag }}</option>
-            {% endfor %}
-          </select>
-          {% render 'icon-chevron-down' %}
-        </div>
-      </div>
-    {% endif %}
-  </header>
-</div>
+
 
 <section class="blog-area  overflow-hidden">
   <div class="container">
-      <div class="row gx-4 gy-5">
+      <div class="row gy-5">
+        {% for article in blog.articles %}
           <!-- --------blog-1------- -->
-          {% for article in blog.articles %}
-          <div class="col-lg-4 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12 p-0">
               <div class="blog-card h-100">
-                     <button class="blog-badge">  {% for tag in article.tags  limit: 1%}
-                      <li>
-                        <a href="{{ blog.url }}/tagged/{{ tag | handle }}" class="article__grid-tag">{{ tag }}</a>
-                      </li>
-                    {% endfor %}  Charities</button>
-                     {% capture img_id %}ArticleImage-{{ article.image.id }}{% endcapture %}
-                     {% capture img_wrapper_id %}ArticleImageWrapper-{{ article.image.id }}{% endcapture %}
-                     {%- assign img_url = article.image | img_url: '1x1' | replace: '_1x1.', '.' -%}
-                     <a href="{{ article.url }}"> <img class="blog-top-img"  id="{{ img_id }}"
-                      class="article__grid-image"
-                      src="{{ img_url }}"
-                      data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
-                      data-aspectratio="{{ article.image.aspect_ratio }}"
-                      data-sizes="auto"
-                      loading="lazy"
-                      width="auto"
-                      height="auto"
-                      alt="{{ article.title }}"></a>
-                 
+
+                {% for tag in article.tags  limit: 1%}
+                  <a href="{{ blog.url }}/tagged/{{ tag | handle }}"><button class="blog-badge">{{ tag }}</button></a>
+                {% endfor %}
+                {% capture img_id %}ArticleImage-{{ article.image.id }}{% endcapture %}
+                {% capture img_wrapper_id %}ArticleImageWrapper-{{ article.image.id }}{% endcapture %}
+                {%- assign img_url = article.image | img_url: '1x1' | replace: '_1x1.', '.' -%}
+               <img class="blog-top-img"  id="{{ img_id }}"
+                 class="article__grid-image"
+                 src="{{ img_url }}"
+                 data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
+                 data-aspectratio="{{ article.image.aspect_ratio }}"
+                 data-sizes="auto"
+                 loading="lazy"
+                 width="auto"
+                 height="auto"
+                 alt="{{ article.title }}">
                   <div class="blog-content">
                       <h6>{{ article.published_at | time_tag: format: 'date' }}</h6>
-                      <h3>{{ article.title | escape }}</h3>
+                      <a href="{{ article.url }}">
+                          <h3>{{ article.title | escape }}T</h3>
+                      </a>
                       <p>{{article.content | strip_html | truncate: 110 }}</p>
                       <div class="d-flex align-items-center blog-btn">
-                          <div><a class="" href="{{ article.url }}">Read More</a></div>
-                          <div><img class="img-fluid" src="../img/blog-img/Arrow.svg" alt=""></div>
+                          <div><a  href="{{ article.url }}">Read More</a></div>
+                          <div><svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17" fill="none">
+                            <path d="M1.5 7.5C0.947715 7.5 0.5 7.94772 0.5 8.5C0.5 9.05228 0.947715 9.5 1.5 9.5V7.5ZM16.5 9.5C17.0523 9.5 17.5 9.05228 17.5 8.5C17.5 7.94772 17.0523 7.5 16.5 7.5V9.5ZM1.5 9.5L16.5 9.5V7.5L1.5 7.5V9.5Z" fill="black"/>
+                            <path d="M11.8858 3.5359C11.6295 3.0467 11.0251 2.8579 10.5359 3.11422C10.0467 3.37053 9.8579 3.97489 10.1142 4.4641L11.8858 3.5359ZM16.1235 9.42642C16.6352 9.63435 17.2185 9.38814 17.4264 8.8765C17.6344 8.36485 17.3881 7.78151 16.8765 7.57358L16.1235 9.42642ZM10.1142 4.4641C10.7734 5.7222 11.4793 6.66431 12.4617 7.4527C13.4246 8.22542 14.6016 8.80791 16.1235 9.42642L16.8765 7.57358C15.4037 6.97504 14.4448 6.47977 13.7135 5.89287C13.0017 5.32166 12.455 4.62229 11.8858 3.5359L10.1142 4.4641Z" fill="black"/>
+                            <path d="M11.8858 13.4641C11.6295 13.9533 11.0251 14.1421 10.5359 13.8858C10.0467 13.6295 9.8579 13.0251 10.1142 12.5359L11.8858 13.4641ZM16.1235 7.57358C16.6352 7.36565 17.2185 7.61186 17.4264 8.1235C17.6344 8.63515 17.3881 9.21849 16.8765 9.42642L16.1235 7.57358ZM10.1142 12.5359C10.7734 11.2778 11.4793 10.3357 12.4617 9.5473C13.4246 8.77458 14.6016 8.19209 16.1235 7.57358L16.8765 9.42642C15.4037 10.025 14.4448 10.5202 13.7135 11.1071C13.0017 11.6783 12.455 12.3777 11.8858 13.4641L10.1142 12.5359Z" fill="black"/>
+                            </svg></div>
                       </div>
                   </div>
               </div>
           </div>
+          <!-- --------blog-1------- -->
         {% endfor %}
-          
+
       </div>
   </div>
 </section>
@@ -68,11 +54,7 @@
 
 
 
-{%- if paginate.pages > 1 -%}
-  {% render 'pagination', paginate: paginate %}
-{%- endif -%}
 
-{% endpaginate %}
 
 
 
@@ -119,24 +101,26 @@
 
 
 
-
-
 <style>
-
   .blog-area {
     background-color: #F8F8F8;
-    padding: 120px 0;
+    padding: 119px 0;
 }
 .blog-area-row{
     grid-column-gap:36px ;
 }
 .blog-title {
     background-color: #F2E085;
-    padding: 100px 0;
+    padding-top: 103px;
+    padding-bottom: 95px;
     border-top: 1px solid #000000;
     border-bottom: 1px solid #000000;
 }
-
+.blog-card a{
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+}
 .blog-title h4 {
     color: black;
     font-family: 'GT Super Txt Trial';
@@ -144,6 +128,7 @@
     font-size: 72px;
     line-height: 83px;
     text-align: center;
+    cursor: pointer;
 }
 
 .blog-card {
@@ -151,8 +136,9 @@
     z-index: 3;
     background-color: #F8F8F8;
     border: 1px solid #000000;
-    cursor: pointer;
     transition: 0.6s;
+   margin-left: 17px;
+    margin-right: 17px;
 }
 .blog-top-img{
     width: 100%;
@@ -217,6 +203,7 @@
     line-height: 30px;
     margin-bottom: 38px;
 }
+
 @media screen and (max-width:991px){
     .blog-title h4{
         font-size: 30px;
@@ -228,6 +215,47 @@
         font-size: 20px;
     }
 }
+@media screen and (max-width:576px){
 
+    .blog-card{
+        margin: 24px;
+    }
+}
+@media screen and (min-width:800px) and (max-width:1440px) {
+    .blog-content h3 {
+        font-size: 22px;
+        line-height: 33px;
+    
+      }
+      .blog-content p{
+        font-size: 16px;
+        line-height: 25px;
+      }
+}
+@media screen and (max-width:560px) {
+    .blog-content h3 {
+        font-size: 20px;
+        line-height: 33px;
+    
+      }
+      .blog-content p{
+        font-size: 16px;
+        line-height: 25px;
+      }
+      .blog-content p {
+        margin-bottom: 0px;
+      }
+}
+@media screen and (min-width:560px) and (max-width:799px) {
+    .blog-content h3 {
+        font-size: 22px;
+        line-height: 33px;
+    
+      }
+      .blog-content p{
+        font-size: 18px;
+        line-height: 25px;
+      }
+}
 
 </style>
