prudct page update

--- a/sections/customenewarrival.liquid
+++ b/sections/customenewarrival.liquid
@@ -60,7 +60,7 @@
 
                 </a>
                 <div class="prouct-details ptype-1">
-                    <h2>{{ product.title}}</h2>
+                  <a href="{{product.url}}"> <h2>{{ product.title}}</h2> </a>
                     <p>{{ product.price | money }}</p>
                 </div>
               </div>
