--- a/sections/customejewwlry.liquid
+++ b/sections/customejewwlry.liquid
@@ -56,7 +56,7 @@
 
                 </a>
                 <div class="prouct-details ptype-1">
-                    <h2>{{ product.title}}</h2>
+                  <a href="{{product.url}}"> <h2>{{ product.title}}</h2> </a>
                     <p>{{ product.price | money }}</p>
                 </div>
               </div>
