--- a/sections/custometshirt.liquid
+++ b/sections/custometshirt.liquid
@@ -71,7 +71,7 @@
 
                 </a>
                 <div class="prouct-details t-shirt-content">
-                    <h2>{{ product.title}}</h2>
+                  <a href="{{product.url}}"> <h2>{{ product.title}}</h2> </a>
                     <p>{{ product.price | money }}</p>
                 </div>
               </div>
